--- a/Barhead.Innovation/Web.config
+++ b/Barhead.Innovation/Web.config
@@ -10,12 +10,12 @@
     <!--<add key="MicrosoftAppId" value="" />
     <add key="MicrosoftAppPassword" value="" />-->
 
-    <add key="MicrosoftAppId" value="de28beb5-a02b-43de-b49a-3d24ba84dd4c" />
-    <add key="MicrosoftAppPassword" value="WoLfmnURJfQbujETFG9M20L" />
+    <add key="MicrosoftAppId" value="YourAppId" />
+    <add key="MicrosoftAppPassword" value="YourAppPassword" />
 
-    <add key="CrmServerUrl" value="https://andreapr2017.crm6.dynamics.com" />
-    <add key="CrmUsername" value="admin@andreapr2017.onmicrosoft.com" />
-    <add key="CrmPassword" value="pass@word2" />
+    <add key="CrmServerUrl" value="https://yourcrmenvironment.crm6.dynamics.com" />
+    <add key="CrmUsername" value="admin@yourcrmenvironment.onmicrosoft.com" />
+    <add key="CrmPassword" value="yourpassword" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
